<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreenActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/blue_violet_gradient_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_from_the_btns"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:gravity="center"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/goto_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/login_with_profile"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:background="@color/Royal_Blue"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/goto_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/registration_title"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:background="@color/Royal_Blue_Dark"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/goto_guest_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/login_without_profile"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>