<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuestLoginActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/blue_violet_gradient_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <!-- Üdvözöljük, adja meg a nevét, input, start gomb  -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login_as_guest"
                android:textColor="#005b96"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/enter_name"
                android:textColor="#6497b1"
                android:textSize="15sp"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name_hint"
                    android:textColor="#005b96"
                    android:textColorHint="#808080" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/goto_quiz_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/next_to_quiz_btn"
                android:textSize="15sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>