<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ForgotPasswordActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/purple_pink_gradient_background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:text="@string/forgotten_password"
        android:textColor="@color/black"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_enter_restore_email"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginHorizontal="14dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgot_emailLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="@color/Royal_Blue_Dark"
        app:hintTextColor="@color/Royal_Blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_emailEt"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:textColorHint="#757575" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forgot_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_email"
            android:textColor="@color/white"
            android:background="@drawable/forgot_password_btn_border"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>