<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_violet_gradient_background"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".SelectQuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/sign_out_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:text="@string/sign_out"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/choose_topic_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/movie_quiz_btn"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/bttf"
                android:scaleType="fitXY"
                android:contentDescription="@string/topic_image"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center|bottom"
                android:text="@string/movies_topic"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:shadowColor = "#000"
                android:shadowDx = "2"
                android:shadowDy = "2"
                android:shadowRadius = "1"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/game_quiz_btn"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <ImageView
                android:layout_width="212dp"
                android:layout_height="193dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:translationX="-25dp"
                android:src="@drawable/the_last_of_us"
                android:contentDescription="@string/topic_image"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center|bottom"
                android:text="@string/games_topic"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:shadowColor = "#000"
                android:shadowDx = "2"
                android:shadowDy = "2"
                android:shadowRadius = "1"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/history_quiz_btn"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/matyas_kiraly"
                android:scaleType="fitXY"
                android:contentDescription="@string/topic_image"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center|bottom"
                android:text="@string/history_topic"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:shadowColor = "#000"
                android:shadowDx = "2"
                android:shadowDy = "2"
                android:shadowRadius = "1"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/geography_quiz_btn"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/geography"
                android:scaleType="fitXY"
                android:contentDescription="@string/topic_image"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center|bottom"
                android:text="@string/geography_topic"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:shadowColor = "#000"
                android:shadowDx = "2"
                android:shadowDy = "2"
                android:shadowRadius = "1"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>