<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@drawable/blue_violet_gradient_background"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center"
    android:theme="@style/NoActionBarTheme">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:text="@string/results"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/placeholder"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/congratulations"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:text="Felhasználónév"/>

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/Royal_Blue"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck"
        tools:text="Helyes válaszok száma / kérdések száma"
        android:gravity="center"/>

    <TextView
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/rate_question"
        tools:text="Értékelje a kérdéssort!"/>

    <RatingBar
        android:id="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rating="1.5"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_page_option_border"
        android:layout_marginTop="30dp"
        android:text="@string/finish_quiz"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

</LinearLayout>